--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material/web": "^1.0.0",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,6 +23,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "rmwc": "^8.0.8",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
