--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
    "dependencies": {
       "class-transformer": "^0.5.1",
       "class-validator": "^0.14.0",
+      "common": "file:../common",
       "cors": "^2.8.5",
       "express": "^4.18.2",
       "pg": "^8.4.0",
