--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "rmwc": "^8.0.8",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
+    "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
