--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
       "common": "file:../common",
       "cors": "^2.8.5",
       "express": "^4.18.2",
+      "express-oauth2-jwt-bearer": "^1.6.0",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17",
