--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
-REACT_APP_API_SERVER_URL=http://localhost:6060
+REACT_APP_API_SERVER_URL=http://localhost:3000/api/
 REACT_APP_AUTH0_DOMAIN=dev-2q58mg30s0wp6ggd.au.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=zFp4lIPulMPbUz8UU2g7im344JDjmUrS
 REACT_APP_AUTH0_CALLBACK_URL=http://localhost:3001/callback
+REACT_APP_AUTH0_AUDIENCE=https://syllabustracker.matthewtapps.com
