--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,15 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "axios": "^1.6.2",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.14.0",
       "common": "file:../common",
       "cors": "^2.8.5",
+      "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "express-oauth2-jwt-bearer": "^1.6.0",
+      "node-fetch": "^3.3.2",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17",
