--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "@types/node": "^16.18.57",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.10",
-    "common": "file:./src/shared",
+    "common": "file:../common",
     "fs": "^0.0.1-security",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
