--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "express-oauth2-jwt-bearer": "^1.6.0",
+      "morgan": "^1.10.0",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
@@ -24,6 +25,7 @@
    "devDependencies": {
       "@types/cors": "^2.8.14",
       "@types/express": "^4.17.18",
+      "@types/morgan": "^1.9.9",
       "@types/node": "^16.11.10",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
