--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,19 @@
 {
-   "name": "backend",
-   "version": "1.0.0",
+   "name": "syllabustrackerapi-env",
+   "version": "0.1.5",
    "description": "",
    "main": "index.ts",
    "scripts": {
       "start": "ts-node index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "copy-common": "xcopy /E /I ..\\common\\* src\\common\\"
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
    "dependencies": {
       "axios": "^1.6.2",
-      "common": "file:../common",
+      "common": "./src/common",
       "cors": "^2.8.5",
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
