--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.10",
-    "common": "file:../common",
+    "common": "./src/common",
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
